--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": "^8.2",
-        "micromus/kafka-bus": "^0.4.0"
+        "micromus/kafka-bus": "^0.4.0",
+        "ramsey/uuid": "^4.7"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.64",
